k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learntogrow-frontend
  namespace: default
  labels:
    app: learntogrow-frontend
spec:
  selector:
    app: learntogrow-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30081
    protocol: TCP
    name: http
  type: NodePort
